removed example md file

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -103,7 +103,8 @@ function calculateBgColor(num: number) {
                         <p>Software Engineer</p>
                         <p>
                             Worcester Polytechnic Institute <span
-                                class="font-light">CS '25</span>
+                                class="font-light">CS '25</span
+                            >
                         </p>
                         <p>prev. @Verizon @JahnelGroup</p>
                     </div>
