added mtg guess who

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -112,6 +112,15 @@ function calculateBgColor(num: number) {
             </div>
             <section class={`w-full flex-grow grid grid-cols-12 gap-2 pt-4`}>
                 <div
+                    class={`col-span-12 bg-teal-500 bg-opacity-20 border-2 border-teal-500 rounded-xl p-2`}
+                >
+                    <h3 class="text-2xl">MTG Guess Who</h3>
+                    <p class="font-normal">
+                        A <i>Guess Who</i>-style game to play with the top 100
+                        commander cards in Magic: The Gathering.
+                    </p>
+                </div>
+                <div
                     class={`col-span-8 bg-red-500 bg-opacity-20 border-2 border-red-500 rounded-xl p-2`}
                 >
                     <h3 class="text-2xl">Verizon Family Line</h3>
